# temporary_analysis

./: LICENSE  README.md  hello.py  pyproject.toml  requirements.txt
.history/: .gitignore_20241227174541
.history/doc/: uv_20241227175322.md
.history/newyear/: nao_20250101025858.html  nao_20250101025933.html  nao_20250101190443.html  nobu_20241231232105.html  nobu_20250101025936.html  nobu_20250101030040.html
ai4i/: README.md
ai4i/notebook/: ai4i.ipynb
home_price_sim/: main.py  pyproject.toml
home_price_sim/src/: home_price_sim.py
newyear/: nao.html  nobu.html
newyear/.history/: nao_20241231231940.html  nao_20241231232918.html  nobu_20241231231316.html
newyear/notebook/: exp_otoshidama.ipynb
