[project]
name = "temporary-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.0",
    "matplotlib-fontja>=1.0.0",
    "numpy>=2.2.1",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "polars>=1.18.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
]
