[project]
name = "home-price-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "marimo[recommended]>=0.13.6",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "seaborn>=0.13.2",
]
